--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sternelee/rlottie",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "sternelee",
   "main": "dist/lib/index.umd.js",
   "module": "dist/lib/index.es.js",
@@ -10,6 +10,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "repository": "https://gitee.com/sternelee/rlottie-worker",
   "keywords": [
     "rlottie",
     "webworker",
