--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
+    "@sternelee/rlottie": "^1.1.0",
     "@types/pako": "^1.0.3",
     "pako": "^2.0.4"
   }
